# End_to_End_Text_Summarization-System

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_transformation.ipynb  Text_Summarization.ipynb  trials.ipynb
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py
