[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textSummarizer"
version = "0.0.0"
description = "A small python package for NLP app"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chukwuemeka-James", email = "official.chukwuemekajames@gmail.com" }
]
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/Chukwuemeka-James/End_to_End_Text_Summarization-System"
repository = "https://github.com/Chukwuemeka-James/End_to_End_Text_Summarization-System"
bug_tracker = "https://github.com/Chukwuemeka-James/End_to_End_Text_Summarization-System/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

